--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,33 +1,20 @@
-.App {
-  text-align: center;
+.game {
+  font-size: 40px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.gridContainer {
+  width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.row {
+  width: 100%;
+  height: 50px;
+  /* border: solid black; */
+  /* display: inline-block; */
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.square {
+  width: 40px;
+  height: 45px;
+  display: inline-block;
+  border: solid black;
 }
