--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,20 @@
 .game {
+  width: 100%;
+  height: 969px;
+  background-color: white;
   font-size: 40px;
 }
 
+.content {
+  width: 41%;
+  height: 100%;
+
+  margin: auto;
+  color: yellow;
+  background-color: black;
+}
 .gridContainer {
-  width: 100%;
+  text-align: center;
 }
 
 .row {
@@ -13,8 +24,31 @@
   /* display: inline-block; */
 }
 .square {
-  width: 40px;
+  width: 4.95%;
+  /* width: 40px; */
   height: 45px;
   display: inline-block;
   border: solid black;
+}
+
+.topContent {
+  display: inline-block;
+  width: 100%;
+}
+.gameText {
+  display: inline-block;
+  width: 80%;
+}
+#startButton {
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  background-color: rgb(15, 34, 70);
+  color: white;
+  border: solid rgb(56, 88, 148);
 }
